# Ubuntu-Time-Machine

./: .gitattributes  CMakeLists.txt  GUI-SUMMARY.md  INSTALLATION.md  LICENSE  PACKAGING.md  PRODUCTION-RELEASE.md  PROJECT-OUTLINE.md  PROJECT-STATUS.md  QUICK-BUILD.md  README.md  Screencast from 2025-03-23 23-43-47.webm  build-package.sh  build-production.sh  quick-build.sh  run-dev.sh
packaging/DEBIAN/: control
packaging/usr/lib/ubuntu-time-machine/: index.html  main.js  main.js.map  preload.js  renderer.js  simple-main.js
packaging/usr/share/applications/: ubuntu-time-machine.desktop
release/: ubuntu-time-machine-2.0.0-Linux.deb
src/cli/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/include/utm/: backup_engine.hpp  config.hpp  database.hpp  filesystem_utils.hpp  logging.hpp  system_utils.hpp
src/core/src/: backup_engine.cpp  config.cpp  logging.cpp  main.cpp  system_utils.cpp
src/core/tests/: CMakeLists.txt
src/gui/: package-lock.json  package.json  tsconfig.json  webpack.config.js
src/gui/src/main/: index.ts  preload.ts
src/gui/src/renderer/: App.tsx  index.html  index.tsx
src/gui/src/renderer/pages/: BackupPage.tsx  DashboardPage.tsx  ProfilesPage.tsx  RestorePage.tsx  SettingsPage.tsx
src/gui/src/renderer/services/: BackupService.ts
src/gui/src/renderer/styles/: global.css
src/gui/src/renderer/types/: global.d.ts
src/gui/src/renderer/utils/: logger.ts
src/system_integration/: CMakeLists.txt  postinst  postrm  preinst  prerm  ubuntu-time-machine.desktop  ubuntu-time-machine.service
utm_research_paper/: utm_paper.aux  utm_paper.tex
